# platform-backend

./: .cursorrules  .dockerignore  .env.docker.example  .env.unified-worker.example  .gitignore  .mcp.json  .mcp.json.bkp  .swcrc  AGENT.md  AGENTE_LOCAL_ESPELHO_FIX.md  AGENTS.md  APIS_CORRIGIDAS_SUMMARY.md  API_CONSOLIDATION_SUMMARY.md  AUTOMATIC_REACTIONS_IMPLEMENTATION.md  AUTO_PREENCHIMENTO_VARIAVEIS_SUMMARY.md  BACKUP_README.md  BUG_FLOW_BUILDER_ANALISE.md  BUTTON_EMOJI_MAPPING_IMPLEMENTATION.md  BUTTON_PROCESSING_FIX_SUMMARY.md  CLAUDE.md  CLAUDE.md.bak  COMPONENTS_OBJECT_TO_ARRAY_FIX.md  CONCURRENCY_LIMIT_UPDATE.md  COPY_CODE_BUTTON_FIX_SUMMARY.md  DASHBOARD_ACESSO_FINAL.md  DISPARO_API_FIX_SUMMARY.md  DOCKER_CONFIG_YML_FIX.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  GEMINI.md  IFRAME_INTEGRATION.md  IMPLEMENTACAO_WHATSAPP_CONFIG.md  INSTAGRAM_TRANSLATION_UNIFIED_TEMPLATE_FIXES.md  INTEGRATION_TESTS_SUMMARY.md  INTERACTIVE_MESSAGE_FIX.md  INTERACTIVE_PREVIEW_REACTIONS_IMPLEMENTATION.md  LOTE_ATIVO_UNICO_SUMMARY.md  MASTER-FRONT-SKILL.md  PHONENUMBERID_FIX_SUMMARY.md  (+196 more)
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
__mocks__/: fileMock.js  ioredis.ts  redis.ts
__tests__/: .env.test  README.md  button-processing-unit.test.ts  button-reaction-queries-integration.test.ts  button-system-final.test.js  max-output-tokens-config.test.ts  openai-intelligent-fallback.test.ts  openai-schema-compatibility.test.ts  run-comprehensive-tests.ts  run-targeted-tests.ts  test-button-emoji-mapping.ts  test-button-reactions.ts  test-caixa-agente-sync.ts  test-complete-reaction-flow.ts  test-content-debug.js  test-disparo-debug.ts  test-image-stream.js  test-intent.ts  test-messages-with-reactions-api.ts  test-prisma.ts  test-queue-database-structure.ts  test-template-preview.js  test-unified-template-query.ts  test-webhook-button-reactions.ts  test-webhook-e2e.ts  test-webhook-functionality.ts  test-webhook-mtf-diamante.ts  test-webhook-reaction-integration.ts  test-webhook-reactions.ts  test-webhook-simple.js  test-whatsapp-formatting.html  teste-results-summary.md  teste-results-summary.txt  webhook-button-processing.test.js  webhook-button-processing.test.ts  webhook-integration.test.ts
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx
assets/: images
(+2743 files in other folders)
